# spherical_harmonic_gravity

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
tests/: test_eigen.cpp
